# fft-timed

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  fft-timed.cabal  stack.yaml
app/: Main.hs
benchmark/: Annalize.hs  Main.hs  Reified.hs
src/: FftTimed.hs
src/FftTimed/: DydicRootOfUnity.hs  IO.hs  Reified.hs  RomanFft.hs  RootOfUnity.hs
test/: FftTimedSpec.hs  Spec.hs
