cabal-version:       2.4
name:                fft-timed
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/Nolrai/fft-timed#fft-timed) for more details.
homepage:            https://github.com/Nolrai/fft-timed
bug-reports:         https://github.com/Nolrai/fft-timed/issues
license:             MIT
license-file:        LICENSE
author:              Chris Upshaw
maintainer:          Chris Upshaw <chrisaupshaw@gmail.com>
copyright:           2020 Chris Upshaw
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md

source-repository head
  type:                git
  location:            https://github.com/Nolrai/fft-timed.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , relude
                     , array
                     , vector
                     , HCodecs
                     , simple-reflect

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -Wmonomorphism-restriction
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
                       -Widentities
                       -Wall-missed-specialisations
                       -Wmissing-local-signatures


  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     FftTimed
                     , FftTimed.IO
                     , FftTimed.RomanFft
                     , FftTimed.RootOfUnity
  build-depends:       containers
                     , transformers
                     , ghc

executable fft-timed
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       fft-timed
                     , deepseq
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite fft-timed-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       FftTimedSpec
  build-depends:       fft-timed
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark fft-timed-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  other-modules:       Annalize
                     , Reified

  build-depends:       base-noprelude
                     , criterion
                     , fft-timed
                     , relude
                     , optparse-applicative
                     , vector
                     , containers
                     , easyplot
                     , statistics
                     , temporary
                     , aeson
                     , text
                     , console-program
                     , deepseq

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wno-missing-export-lists
